Bug 376887. If document gets painted before being fully loaded, and gets focused, the accessible tree is often incorrectly truncated. r=surkov